--- a/mypage.html
+++ b/mypage.html
@@ -6,7 +6,7 @@
     <title>Web Development Project</title>
 </head>
 <body>
-    <h1>My Web Development Project</h1>
+    <h1>welcome to Web Development Project</h1>
 
     <h2>Introduction</h2>
     <p>
